--- a/TextBook-15/ex15.ipynb
+++ b/TextBook-15/ex15.ipynb
@@ -1470,6 +1470,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package lime not found. Installing...\n",
+      "Package scikit-learn not found. Installing...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "LimeTabularExplainer.__init__() got an unexpected keyword argument 'training_sample_weight'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 44\u001b[0m\n\u001b[0;32m     41\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X_train_scaled, y_train)\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# LIME explainer 생성\u001b[39;00m\n\u001b[1;32m---> 44\u001b[0m explainer \u001b[38;5;241m=\u001b[39m \u001b[43mlime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlime_tabular\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLimeTabularExplainer\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     45\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtraining_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mX_train_scaled\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtraining_labels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mclassification\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtraining_sample_weight\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     49\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfeature_names\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfeature_names\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     50\u001b[0m \u001b[43m    \u001b[49m\u001b[43mclass_names\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_names\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     51\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdiscretize_continuous\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\n\u001b[0;32m     52\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     54\u001b[0m \u001b[38;5;66;03m# 테스트 데이터의 첫 번째 샘플을 선택하여 예측 설명\u001b[39;00m\n\u001b[0;32m     55\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m  \u001b[38;5;66;03m# 첫 번째 샘플\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: LimeTabularExplainer.__init__() got an unexpected keyword argument 'training_sample_weight'"
+     ]
+    }
+   ],
+   "source": [
+    "#############################################################\n",
+    "# [2] 모델 복잡도 및 일반화\n",
+    "# [2-6] 모델 해석성(Model Interpretability) : LIME, SHAP\n",
+    "#############################################################\n",
+    "import subprocess\n",
+    "import sys\n",
+    "\n",
+    "# 필요한 패키지가 설치되어 있는지 확인하고, 없으면 설치\n",
+    "required_packages = ['lime', 'xgboost', 'scikit-learn', 'matplotlib']\n",
+    "for package in required_packages:\n",
+    "    try:\n",
+    "        __import__(package)\n",
+    "    except ImportError:\n",
+    "        print(f\"Package {package} not found. Installing...\")\n",
+    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package])\n",
+    "\n",
+    "# 필수 라이브러리 import\n",
+    "import lime\n",
+    "import lime.lime_tabular\n",
+    "import xgboost as xgb\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# 데이터 로드\n",
+    "data = load_breast_cancer()\n",
+    "X = data.data\n",
+    "y = data.target\n",
+    "\n",
+    "# 데이터 분할\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# 데이터 표준화\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# XGBoost 모델 학습\n",
+    "model = xgb.XGBClassifier(eval_metric='logloss')\n",
+    "model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# LIME explainer 생성\n",
+    "explainer = lime.lime_tabular.LimeTabularExplainer(\n",
+    "    training_data=X_train_scaled, \n",
+    "    training_labels=y_train, \n",
+    "    mode=\"classification\", \n",
+    "    training_sample_weight=None, \n",
+    "    feature_names=data.feature_names, \n",
+    "    class_names=data.target_names, \n",
+    "    discretize_continuous=True\n",
+    ")\n",
+    "\n",
+    "# 테스트 데이터의 첫 번째 샘플을 선택하여 예측 설명\n",
+    "i = 0  # 첫 번째 샘플\n",
+    "explanation = explainer.explain_instance(X_test_scaled[i], model.predict_proba)\n",
+    "\n",
+    "# 결과 시각화\n",
+    "explanation.show_in_notebook(show_table=True, show_all=False)\n",
+    "\n",
+    "# 특정 샘플에 대한 LIME 해석 그래프 출력\n",
+    "explanation.as_pyplot_figure()\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
